src/test/ui/did_you_mean/issue-54109-without-witness.stderr
error: `and` is not a logical operator
  --> $DIR/issue-54109-without-witness.rs:13:15
   |
LL |     let _ = a and b;
   |               ^^^ help: use `&&` to perform logical conjunction
   |
   = note: unlike in e.g., python and PHP, `&&` and `||` are used for logical operators

error: `and` is not a logical operator
  --> $DIR/issue-54109-without-witness.rs:15:10
   |
LL |     if a and b {
   |          ^^^ help: use `&&` to perform logical conjunction
   |
   = note: unlike in e.g., python and PHP, `&&` and `||` are used for logical operators

error: `or` is not a logical operator
  --> $DIR/issue-54109-without-witness.rs:24:15
   |
LL |     let _ = a or b;
   |               ^^ help: use `||` to perform logical disjunction
   |
   = note: unlike in e.g., python and PHP, `&&` and `||` are used for logical operators

error: `or` is not a logical operator
  --> $DIR/issue-54109-without-witness.rs:26:10
   |
LL |     if a or b {
   |          ^^ help: use `||` to perform logical disjunction
   |
   = note: unlike in e.g., python and PHP, `&&` and `||` are used for logical operators

error: `and` is not a logical operator
  --> $DIR/issue-54109-without-witness.rs:34:11
   |
LL |     if (a and b) {
   |           ^^^ help: use `&&` to perform logical conjunction
   |
   = note: unlike in e.g., python and PHP, `&&` and `||` are used for logical operators

error: `or` is not a logical operator
  --> $DIR/issue-54109-without-witness.rs:42:11
   |
LL |     if (a or b) {
   |           ^^ help: use `||` to perform logical disjunction
   |
   = note: unlike in e.g., python and PHP, `&&` and `||` are used for logical operators

error: `and` is not a logical operator
  --> $DIR/issue-54109-without-witness.rs:50:13
   |
LL |     while a and b {
   |             ^^^ help: use `&&` to perform logical conjunction
   |
   = note: unlike in e.g., python and PHP, `&&` and `||` are used for logical operators

error: `or` is not a logical operator
  --> $DIR/issue-54109-without-witness.rs:58:13
   |
LL |     while a or b {
   |             ^^ help: use `||` to perform logical disjunction
   |
   = note: unlike in e.g., python and PHP, `&&` and `||` are used for logical operators

error: aborting due to 8 previous errors

